refactor: order status, payment status
