# campaignservice/internal/core/domain/order/entity.go
@@ -11,17 +11,18 @@ type OrderStatus string
 const (
 	OrderStatusPending    OrderStatus = "PENDING"
 	OrderStatusProcessing OrderStatus = "PROCESSING"
-	OrderStatusCompleted  OrderStatus = "COMPLETED"
+	OrderStatusSuccess    OrderStatus = "SUCCESS"
 	OrderStatusFailed     OrderStatus = "FAILED"
 )
 
 type Order struct {
-	Id          xid.ID      `json:"id" bun:"id,pk,skipupdate"`
-	CustomerId  string      `json:"customer_id" bun:"customer_id"`
-	TotalAmount float64     `json:"total_amount" bun:"total_amount"`
-	Status      OrderStatus `json:"status" bun:"status"`
-	CreatedAt   time.Time   `json:"created_at" bun:",nullzero,notnull,default:current_timestamp,skipupdate"`
-	UpdatedAt   time.Time   `json:"updated_at" bun:",nullzero,notnull,default:current_timestamp"`
+	Id           xid.ID      `json:"id" bun:"id,pk,skipupdate"`
+	CustomerId   string      `json:"customer_id" bun:"customer_id"`
+	CustomerName string      `json:"customer_name" bun:"customer_name"`
+	TotalAmount  float64     `json:"total_amount" bun:"total_amount"`
+	Status       OrderStatus `json:"status" bun:"status"`
+	CreatedAt    time.Time   `json:"created_at" bun:",nullzero,notnull,default:current_timestamp,skipupdate"`
+	UpdatedAt    time.Time   `json:"updated_at" bun:",nullzero,notnull,default:current_timestamp"`
 }
 
 func (s OrderStatus) String() string {
