# orderservice/internal/adapters/secondary/order/persistence/postgres/model.go
@@ -11,7 +11,8 @@ type Order struct {
 	bun.BaseModel `bun:"orders"`
 	Id            xid.ID    `bun:",skipupdate,pk"`
 	TotalAmount   float64   `bun:"total_amount,notnull"`
-	CustomerID    string    `bun:"customer_id,notnull"`
+	CustomerId    string    `bun:"customer_id,notnull"`
+	CustomerName  string    `bun:"customer_name,notnull"`            // Added field for customer name
 	Status        string    `bun:"status,notnull,default:'PENDING'"` //
 	CreatedAt     time.Time `bun:",nullzero,notnull,default:current_timestamp,skipupdate"`
 	UpdatedAt     time.Time `bun:",nullzero,notnull,default:current_timestamp"`
@@ -19,22 +20,24 @@ type Order struct {
 
 func (o Order) ToDomainModel() domain.Order {
 	return domain.Order{
-		Id:          o.Id,
-		CustomerId:  o.CustomerID,
-		TotalAmount: o.TotalAmount,
-		Status:      domain.OrderStatus(o.Status),
-		CreatedAt:   o.CreatedAt,
-		UpdatedAt:   o.UpdatedAt,
+		Id:           o.Id,
+		CustomerId:   o.CustomerId,
+		CustomerName: o.CustomerName,
+		TotalAmount:  o.TotalAmount,
+		Status:       domain.OrderStatus(o.Status),
+		CreatedAt:    o.CreatedAt,
+		UpdatedAt:    o.UpdatedAt,
 	}
 }
 
 func FromDomainModel(dm domain.Order) Order {
 	return Order{
-		Id:          dm.Id,
-		CustomerID:  dm.CustomerId,
-		TotalAmount: dm.TotalAmount,
-		Status:      string(dm.Status),
-		CreatedAt:   dm.CreatedAt,
-		UpdatedAt:   dm.UpdatedAt,
+		Id:           dm.Id,
+		CustomerId:   dm.CustomerId,
+		CustomerName: dm.CustomerName,
+		TotalAmount:  dm.TotalAmount,
+		Status:       string(dm.Status),
+		CreatedAt:    dm.CreatedAt,
+		UpdatedAt:    dm.UpdatedAt,
 	}
 }
